feat: content UI

--- a/index.html
+++ b/index.html
@@ -67,6 +67,301 @@
           <img src="./assets/slider-img.svg" alt="" />
         </div>
       </div>
+      <div class="content">
+        <div class="section clients">
+          <div class="section__header">
+            <div class="section__heading">Our Clients</div>
+            <div class="section__sub-heading">
+              We have been working with some Fortune 500+ clients
+            </div>
+          </div>
+          <div class="clients-logo flex-between">
+            <img src="./assets/client1.svg" alt="" />
+            <img src="./assets/client2.svg" alt="" />
+            <img src="./assets/client3.svg" alt="" />
+            <img src="./assets/client4.svg" alt="" />
+            <img src="./assets/client5.svg" alt="" />
+            <img src="./assets/client6.svg" alt="" />
+            <img src="./assets/client7.svg" alt="" />
+          </div>
+        </div>
+        <div class="section community">
+          <div class="section__header">
+            <div class="section__heading">
+              Manage your entire community in a single system
+            </div>
+            <div class="section__sub-heading">
+              Who is Nextcent suitable for?
+            </div>
+          </div>
+          <div class="community__card-container">
+            <div class="community__card">
+              <div class="community__card-img">
+                <img src="./assets/membership.svg" alt="" />
+              </div>
+              <div class="community__heading headline3">
+                <p>Membership Organisations</p>
+              </div>
+              <div class="community__sub-heading body3--regular">
+                <p>
+                  Our membership management software provides full automation of
+                  membership renewals and payments
+                </p>
+              </div>
+            </div>
+            <div class="community__card">
+              <div class="community__card-img">
+                <img src="./assets/national-association.svg" alt="" />
+              </div>
+              <div class="community__heading headline3">
+                <p>National Associations</p>
+              </div>
+              <div class="community__sub-heading body3--regular">
+                <p>
+                  Our membership management software provides full automation of
+                  membership renewals and payments
+                </p>
+              </div>
+            </div>
+            <div class="community__card">
+              <div class="community__card-img">
+                <img src="./assets/club&group.svg" alt="" />
+              </div>
+              <div class="community__heading headline3">
+                <p>Clubs And Groups</p>
+              </div>
+              <div class="community__sub-heading body3--regular">
+                <p>
+                  Our membership management software provides full automation of
+                  membership renewals and payments
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content__body">
+          <div class="section unlock flex-between">
+            <div class="unlock__img">
+              <img src="./assets/rafiki.svg" alt="" />
+            </div>
+            <div class="unlock__text">
+              <div class="unlock__heading headline2">
+                <p>The unseen of spending three years at Pixelgrade</p>
+              </div>
+              <div class="unlock__sub-heading body3--regular">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  sit amet justo ipsum. Sed accumsan quam vitae est varius
+                  fringilla. Pellentesque placerat vestibulum lorem sed porta.
+                  Nullam mattis tristique iaculis. Nullam pulvinar sit amet
+                  risus pretium auctor. Etiam quis massa pulvinar, aliquam quam
+                  vitae, tempus sem. Donec elementum pulvinar odio.
+                </p>
+              </div>
+              <button class="unlock__btn btn__primary--default body2--medium">
+                Learn more
+              </button>
+            </div>
+          </div>
+          <div class="section achievements flex-between">
+            <div class="achievements__text">
+              <div class="achievements__heading headline2">
+                <p>Helping a local <span>business reinvent itself</span></p>
+              </div>
+              <div class="achievements__sub-heading body2--regular">
+                <p>We reached here with our hard work and dedication</p>
+              </div>
+            </div>
+            <div class="achievements__counts">
+              <div class="achievements__item">
+                <div class="achievements__img">
+                  <img src="./assets/member.svg" alt="" />
+                </div>
+                <div class="achievements__info">
+                  <div class="item-heading headline3"><p>2,245,341</p></div>
+                  <div class="item-subheading body2--regular">
+                    <p>Members</p>
+                  </div>
+                </div>
+              </div>
+              <div class="achievements__item">
+                <div class="achievements__img">
+                  <img src="./assets/member.svg" alt="" />
+                </div>
+                <div class="achievements__info">
+                  <div class="item-heading headline3"><p>2,245,341</p></div>
+                  <div class="item-subheading body2--regular">
+                    <p>Members</p>
+                  </div>
+                </div>
+              </div>
+              <div class="achievements__item">
+                <div class="achievements__img">
+                  <img src="./assets/member.svg" alt="" />
+                </div>
+                <div class="achievements__info">
+                  <div class="item-heading headline3"><p>2,245,341</p></div>
+                  <div class="item-subheading body2--regular">
+                    <p>Members</p>
+                  </div>
+                </div>
+              </div>
+              <div class="achievements__item">
+                <div class="achievements__img">
+                  <img src="./assets/member.svg" alt="" />
+                </div>
+                <div class="achievements__info">
+                  <div class="item-heading headline3"><p>2,245,341</p></div>
+                  <div class="item-subheading body2--regular">
+                    <p>Members</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="section calenders flex-between">
+            <div class="calenders__img">
+              <img src="./assets/pana.svg" alt="" />
+            </div>
+            <div class="calenders__text">
+              <div class="calenders__heading headline2">
+                <p>How to design your site footer like we did</p>
+              </div>
+              <div class="calenders__sub-heading body3--regular">
+                <p>
+                  Donec a eros justo. Fusce egestas tristique ultrices. Nam
+                  tempor, augue nec tincidunt molestie, massa nunc varius arcu,
+                  at scelerisque elit erat a magna. Donec quis erat at libero
+                  ultrices mollis. In hac habitasse platea dictumst. Vivamus
+                  vehicula leo dui, at porta nisi facilisis finibus. In euismod
+                  augue vitae nisi ultricies, non aliquet urna tincidunt.
+                  Integer in nisi eget nulla commodo faucibus efficitur quis
+                  massa. Praesent felis est, finibus et nisi ac, hendrerit
+                  venenatis libero. Donec consectetur faucibus ipsum id gravida.
+                </p>
+              </div>
+              <button
+                class="calenders__btn btn__primary--default body2--medium"
+              >
+                Learn more
+              </button>
+            </div>
+          </div>
+          <div class="section customers">
+            <div class="customers__img">
+              <img src="./assets/customer.jpg" alt="" />
+            </div>
+            <div class="customers__text">
+              <div class="customers__text-content">
+                <div class="customers__comment body2--medium">
+                  <p>
+                    Maecenas dignissim justo eget nulla rutrum molestie.
+                    Maecenas lobortis sem dui, vel rutrum risus tincidunt
+                    ullamcorper. Proin eu enim metus. Vivamus sed libero ornare,
+                    tristique quam in, gravida enim. Nullam ut molestie arcu, at
+                    hendrerit elit. Morbi laoreet elit at ligula molestie, nec
+                    molestie mi blandit. Suspendisse cursus tellus sed augue
+                    ultrices, quis tristique nulla sodales. Suspendisse eget
+                    lorem eu turpis vestibulum pretium. Suspendisse potenti.
+                    Quisque malesuada enim sapien, vitae placerat ante feugiat
+                    eget. Quisque vulputate odio neque, eget efficitur libero
+                    condimentum id. Curabitur id nibh id sem dignissim finibus
+                    ac sit amet magna.
+                  </p>
+                </div>
+                <div class="customers__name headline4"><p>Tim Smith</p></div>
+                <div class="customers__role body2--regular">
+                  <p>British Dragon Boat Racing Association</p>
+                </div>
+              </div>
+              <div class="customers__text-footer flex-between">
+                <div class="customers__icon flex-between">
+                  <img src="./assets/client1.svg" alt="" />
+                  <img src="./assets/client2.svg" alt="" />
+                  <img src="./assets/client3.svg" alt="" />
+                  <img src="./assets/client4.svg" alt="" />
+                  <img src="./assets/client5.svg" alt="" />
+                </div>
+                <button class="customer__nav btn__tertiary--default headline4">
+                  Meet all customers
+                  <span
+                    ><img src="./assets/arrow-right-icon.svg" alt=""
+                  /></span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="section community-updates">
+            <div class="section__header">
+              <div class="section__heading">Caring is the new marketing</div>
+              <div class="section__sub-heading">
+                The Nexcent blog is the best place to read about the latest
+                membership insights, trends and more. See who's joining the
+                community, read about how our community are increasing their
+                membership income and lot's more.​
+              </div>
+            </div>
+            <div class="community-updates__content">
+              <div class="community-updates__card">
+                <div class="community-updates__img">
+                  <img src="./assets/comunity-updates1.jpg" alt="" />
+                </div>
+                <div class="community-updates__card-info">
+                  <p class="headline4">
+                    Creating Streamlined Safeguarding Processes with OneRen
+                  </p>
+                  <button
+                    class="community-updates__btn btn__tertiary--default headline4"
+                  >
+                    Read more
+                    <span
+                      ><img src="./assets/arrow-right-icon.svg" alt=""
+                    /></span>
+                  </button>
+                </div>
+              </div>
+              <div class="community-updates__card">
+                <div class="community-updates__img">
+                  <img src="./assets/comunity-updates2.jpg" alt="" />
+                </div>
+                <div class="community-updates__card-info">
+                  <p class="headline4">
+                    What are your safeguarding responsibilities and how can you
+                    manage them?
+                  </p>
+                  <button
+                    class="community-updates__btn btn__tertiary--default headline4"
+                  >
+                    Read more
+                    <span
+                      ><img src="./assets/arrow-right-icon.svg" alt=""
+                    /></span>
+                  </button>
+                </div>
+              </div>
+              <div class="community-updates__card">
+                <div class="community-updates__img">
+                  <img src="./assets/comunity-updates3.jpg" alt="" />
+                </div>
+                <div class="community-updates__card-info">
+                  <p class="headline4">
+                    Revamping the Membership Model with Triathlon Australia
+                  </p>
+                  <button
+                    class="community-updates__btn btn__tertiary--default headline4"
+                  >
+                    Read more
+                    <span
+                      ><img src="./assets/arrow-right-icon.svg" alt=""
+                    /></span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer"></div>
     </div>
   </body>
 </html>
