--- a/index.html
+++ b/index.html
@@ -361,7 +361,70 @@
           </div>
         </div>
       </div>
-      <div class="footer"></div>
+      <div class="footer">
+        <div class="footer__top">
+          <p class="headline1">Pellentesque suscipit fringilla libero eu.</p>
+          <button class="btn__primary--default body2--medium">
+            Get a Demo
+            <span
+              ><img src="./assets/arrow-right-icon-white.svg" alt=""
+            /></span>
+          </button>
+        </div>
+        <div class="footer__content">
+          <div class="footer__content-left">
+            <div class="footer__logo">
+              <img src="./assets/Logo-footer.svg" alt="" />
+            </div>
+            <div class="footer__copyright-info body3--regular">
+              <p>Copyright © 2020 Nexcent ltd.</p>
+              <p>All rights reserved</p>
+            </div>
+            <div class="footer__social-icon">
+              <img src="./assets/insta.svg" alt="" />
+              <img src="./assets/social2.svg" alt="" />
+              <img src="./assets/social3.svg" alt="" />
+              <img src="./assets/social4.svg" alt="" />
+            </div>
+          </div>
+          <div class="footer__content-right">
+            <div class="footer__sm-col">
+              <div class="footer__heading"><p>Company</p></div>
+              <div class="footer__nav-container">
+                <a href="" class="nav-item">About us</a>
+                <a href="" class="nav-item">Blog</a>
+                <a href="" class="nav-item">Contact us</a>
+                <a href="" class="nav-item">Pricing</a>
+                <a href="" class="nav-item">Testimonials</a>
+              </div>
+            </div>
+            <div class="footer__sm-col">
+              <div class="footer__heading"><p>Support</p></div>
+              <div class="footer__nav-container">
+                <div class="footer__nav-container">
+                  <a href="" class="nav-item">About us</a>
+                  <a href="" class="nav-item">Blog</a>
+                  <a href="" class="nav-item">Contact us</a>
+                  <a href="" class="nav-item">Pricing</a>
+                  <a href="" class="nav-item">Testimonials</a>
+                </div>
+              </div>
+            </div>
+            <div class="footer__lg-col">
+              <div class="footer__heading"><p>Stay up to date</p></div>
+              <div class="footer__nav-container">
+                <div class="footer__nav-container">
+                  <a href="" class="nav-item">About us</a>
+                  <a href="" class="nav-item">Blog</a>
+                  <a href="" class="nav-item">Contact us</a>
+                  <a href="" class="nav-item">Pricing</a>
+                  <a href="" class="nav-item">Testimonials</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
