feat: footer UI

--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
               <img src="./assets/social4.svg" alt="" />
             </div>
           </div>
-          <div class="footer__content-right">
+          <div class="footer__content-right flex-between">
             <div class="footer__sm-col">
-              <div class="footer__heading"><p>Company</p></div>
+              <div class="footer__heading headline4"><p>Company</p></div>
               <div class="footer__nav-container">
                 <a href="" class="nav-item">About us</a>
                 <a href="" class="nav-item">Blog</a>
@@ -399,27 +399,26 @@
               </div>
             </div>
             <div class="footer__sm-col">
-              <div class="footer__heading"><p>Support</p></div>
+              <div class="footer__heading headline4"><p>Support</p></div>
               <div class="footer__nav-container">
-                <div class="footer__nav-container">
-                  <a href="" class="nav-item">About us</a>
-                  <a href="" class="nav-item">Blog</a>
-                  <a href="" class="nav-item">Contact us</a>
-                  <a href="" class="nav-item">Pricing</a>
-                  <a href="" class="nav-item">Testimonials</a>
-                </div>
+                <a href="" class="nav-item">About us</a>
+                <a href="" class="nav-item">Blog</a>
+                <a href="" class="nav-item">Contact us</a>
+                <a href="" class="nav-item">Pricing</a>
+                <a href="" class="nav-item">Testimonials</a>
               </div>
             </div>
             <div class="footer__lg-col">
-              <div class="footer__heading"><p>Stay up to date</p></div>
-              <div class="footer__nav-container">
-                <div class="footer__nav-container">
-                  <a href="" class="nav-item">About us</a>
-                  <a href="" class="nav-item">Blog</a>
-                  <a href="" class="nav-item">Contact us</a>
-                  <a href="" class="nav-item">Pricing</a>
-                  <a href="" class="nav-item">Testimonials</a>
-                </div>
+              <div class="footer__heading headline4">
+                <p>Stay up to date</p>
+              </div>
+              <div class="footer__input flex-between">
+                <input
+                  class="body3--regular"
+                  placeholder="Your email address"
+                  type="text"
+                />
+                <img src="./assets/send-icon.svg" alt="" />
               </div>
             </div>
           </div>
