--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
         <div class="header__nav">
           <ul>
-            <li class="header__nav-item body2--medium"><a href="">Home</a></li>
+            <li class="header__nav-item body2--medium">
+              <a href="">Home</a>
+            </li>
             <li class="header__nav-item body2--medium">
               <a href="">Service</a>
             </li>
