--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="header flex-between">
+      <div class="header">
         <div class="header__logo">
           <img src="./assets/full-logo.svg" alt="logo" />
         </div>
@@ -47,7 +47,7 @@
           </button>
         </div>
       </div>
-      <div class="slider flex-center">
+      <div class="slider">
         <div class="slider__text">
           <div class="slider__heading headline1">
             <p>
@@ -77,7 +77,7 @@
               We have been working with some Fortune 500+ clients
             </div>
           </div>
-          <div class="clients-logo flex-between">
+          <div class="clients-logo">
             <img src="./assets/client1.svg" alt="" />
             <img src="./assets/client2.svg" alt="" />
             <img src="./assets/client3.svg" alt="" />
@@ -142,7 +142,7 @@
           </div>
         </div>
         <div class="content__body">
-          <div class="section unlock flex-between">
+          <div class="section unlock">
             <div class="unlock__img">
               <img src="./assets/rafiki.svg" alt="" />
             </div>
@@ -165,7 +165,7 @@
               </button>
             </div>
           </div>
-          <div class="section achievements flex-between">
+          <div class="section achievements">
             <div class="achievements__text">
               <div class="achievements__heading headline2">
                 <p>Helping a local <span>business reinvent itself</span></p>
@@ -221,7 +221,7 @@
               </div>
             </div>
           </div>
-          <div class="section calenders flex-between">
+          <div class="section calenders">
             <div class="calenders__img">
               <img src="./assets/pana.svg" alt="" />
             </div>
@@ -276,8 +276,8 @@
                   <p>British Dragon Boat Racing Association</p>
                 </div>
               </div>
-              <div class="customers__text-footer flex-between">
-                <div class="customers__icon flex-between">
+              <div class="customers__text-footer">
+                <div class="customers__icon">
                   <img src="./assets/client1.svg" alt="" />
                   <img src="./assets/client2.svg" alt="" />
                   <img src="./assets/client3.svg" alt="" />
@@ -389,7 +389,7 @@
               <img src="./assets/social4.svg" alt="" />
             </div>
           </div>
-          <div class="footer__content-right flex-between">
+          <div class="footer__content-right">
             <div class="footer__sm-col">
               <div class="footer__heading headline4"><p>Company</p></div>
               <div class="footer__nav-container">
@@ -414,7 +414,7 @@
               <div class="footer__heading headline4">
                 <p>Stay up to date</p>
               </div>
-              <div class="footer__input flex-between">
+              <div class="footer__input">
                 <input
                   class="body3--regular"
                   placeholder="Your email address"
