--- a/index.html
+++ b/index.html
@@ -47,26 +47,94 @@
           </button>
         </div>
       </div>
-      <div class="slider">
-        <div class="slider__text">
-          <div class="slider__heading headline1">
-            <p>
-              Lessons and insights <br />
-              <span>from 8 years</span>
-            </p>
+      <div class="slider-container">
+        <div class="slider">
+          <div class="slider__item">
+            <div class="slider__text">
+              <div class="slider__heading headline1">
+                <p>
+                  Lessons and insights <br />
+                  <span>from 8 years 11</span>
+                </p>
+              </div>
+              <div class="slider__sub-heading body2--regular">
+                <p>
+                  Where to grow your business as a photographer: site or social
+                  media?
+                </p>
+              </div>
+              <div class="register-btn btn__primary--default body2--medium">
+                Register
+              </div>
+            </div>
+            <div class="slider__img">
+              <img src="./assets/slider-img.svg" alt="" />
+            </div>
           </div>
-          <div class="slider__sub-heading body2--regular">
-            <p>
-              Where to grow your business as a photographer: site or social
-              media?
-            </p>
+          <div class="slider__item">
+            <div class="slider__text">
+              <div class="slider__heading headline1">
+                <p>
+                  Lessons and insights <br />
+                  <span>from 8 years 2222</span>
+                </p>
+              </div>
+              <div class="slider__sub-heading body2--regular">
+                <p>
+                  Where to grow your business as a photographer: site or social
+                  media?
+                </p>
+              </div>
+              <div class="register-btn btn__primary--default body2--medium">
+                Register
+              </div>
+            </div>
+            <div class="slider__img">
+              <img src="./assets/slider-img.svg" alt="" />
+            </div>
           </div>
-          <div class="register-btn btn__primary--default body2--medium">
-            Register
+          <div class="slider__item">
+            <div class="slider__text">
+              <div class="slider__heading headline1">
+                <p>
+                  Lessons and insights <br />
+                  <span>from 8 years 333</span>
+                </p>
+              </div>
+              <div class="slider__sub-heading body2--regular">
+                <p>
+                  Where to grow your business as a photographer: site or social
+                  media?
+                </p>
+              </div>
+              <div class="register-btn btn__primary--default body2--medium">
+                Register
+              </div>
+            </div>
+            <div class="slider__img">
+              <img src="./assets/slider-img.svg" alt="" />
+            </div>
           </div>
         </div>
-        <div class="slider__img">
-          <img src="./assets/slider-img.svg" alt="" />
+        <div class="slider__dot-container">
+          <img
+            onclick="goToSlide(0)"
+            src="./assets/dot.svg"
+            alt=""
+            class="dot slider__dot--active"
+          />
+          <img
+            onclick="goToSlide(1)"
+            src="./assets/dot.svg"
+            alt=""
+            class="dot"
+          />
+          <img
+            onclick="goToSlide(2)"
+            src="./assets/dot.svg"
+            alt=""
+            class="dot"
+          />
         </div>
       </div>
       <div class="content">
@@ -427,5 +495,6 @@
         </div>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
