feat : setup side menu

--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
             Sign up
           </button>
         </div>
+        <div class="header__menu-icon">
+          <img src="./assets/menu.svg" width="28px" height="28px" alt="" />
+        </div>
+      </div>
+      <div class="header__menu-hidden">
+        <div class="header__close-btn">
+          <img src="./assets/close.svg" alt="" />
+        </div>
+        <div class="header__menu-list">
+          <a href="" class="header__menu-item body1--medium">Home</a
+          ><a href="" class="header__menu-item body1--medium">Service</a
+          ><a href="" class="header__menu-item body1--medium">Feature</a
+          ><a href="" class="header__menu-item body1--medium">Product</a
+          ><a href="" class="header__menu-item body1--medium">Testimonial</a
+          ><a href="" class="header__menu-item body1--medium">Signup</a
+          ><a href="" class="header__menu-item body1--medium">Log in</a>
+        </div>
       </div>
       <div class="slider-container">
         <div class="slider">
