feat : responsive mobile screen

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             class="dot"
           />
         </div>
+        
       </div>
       <div class="content">
         <div class="section clients">
@@ -478,21 +479,21 @@
             <div class="footer__sm-col">
               <div class="footer__heading headline4"><p>Company</p></div>
               <div class="footer__nav-container">
-                <a href="" class="nav-item">About us</a>
-                <a href="" class="nav-item">Blog</a>
-                <a href="" class="nav-item">Contact us</a>
-                <a href="" class="nav-item">Pricing</a>
-                <a href="" class="nav-item">Testimonials</a>
+                <li><a href="" class="nav-item">About us</a></li>
+                <li><a href="" class="nav-item">Blog</a></li>
+                <li><a href="" class="nav-item">Contact us</a></li>
+                <li><a href="" class="nav-item">Pricing</a></li>
+                <li><a href="" class="nav-item">Testimonials</a></li>
               </div>
             </div>
             <div class="footer__sm-col">
               <div class="footer__heading headline4"><p>Support</p></div>
               <div class="footer__nav-container">
-                <a href="" class="nav-item">About us</a>
-                <a href="" class="nav-item">Blog</a>
-                <a href="" class="nav-item">Contact us</a>
-                <a href="" class="nav-item">Pricing</a>
-                <a href="" class="nav-item">Testimonials</a>
+                <li><a href="" class="nav-item">About us</a></li>
+                <li><a href="" class="nav-item">Blog</a></li>
+                <li><a href="" class="nav-item">Contact us</a></li>
+                <li><a href="" class="nav-item">Pricing</a></li>
+                <li><a href="" class="nav-item">Testimonials</a></li>
               </div>
             </div>
             <div class="footer__lg-col">
