feat : next/prev btn slider

--- a/index.html
+++ b/index.html
@@ -153,7 +153,14 @@
             class="dot"
           />
         </div>
-        
+        <div class="slider__btn-container">
+          <div class="pre-btn" onclick="prevSlide()">
+            <img src="./assets/arrow-left.svg" alt="" />
+          </div>
+          <div class="next-btn" onclick="nextSlide()">
+            <img src="./assets/arrow-right.svg" alt="" />
+          </div>
+        </div>
       </div>
       <div class="content">
         <div class="section clients">
