feat : touch slider

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               </div>
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="./assets/member.svg" alt="" />
+                  <img src="./assets/club.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
@@ -292,7 +292,7 @@
               </div>
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="./assets/member.svg" alt="" />
+                  <img src="./assets/event-booking.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
@@ -303,7 +303,7 @@
               </div>
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="./assets/member.svg" alt="" />
+                  <img src="./assets/payment.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
