--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                   media?
                 </p>
               </div>
-              <div class="register-btn btn__primary--default body2--medium">
+              <div
+                class="register-btn btn btn__primary btn__primary--default body2--medium"
+              >
                 Register
               </div>
             </div>
@@ -102,7 +104,9 @@
                   media?
                 </p>
               </div>
-              <div class="register-btn btn__primary--default body2--medium">
+              <div
+                class="register-btn btn btn__primary btn__primary--default body2--medium"
+              >
                 Register
               </div>
             </div>
@@ -124,7 +128,9 @@
                   media?
                 </p>
               </div>
-              <div class="register-btn btn__primary--default body2--medium">
+              <div
+                class="register-btn btn btn__primary btn__primary--default body2--medium"
+              >
                 Register
               </div>
             </div>
@@ -253,7 +259,9 @@
                   vitae, tempus sem. Donec elementum pulvinar odio.
                 </p>
               </div>
-              <button class="unlock__btn btn__primary--default body2--medium">
+              <button
+                class="unlock__btn btn btn__primary btn__primary--default body2--medium"
+              >
                 Learn more
               </button>
             </div>
@@ -336,7 +344,7 @@
                 </p>
               </div>
               <button
-                class="calenders__btn btn__primary--default body2--medium"
+                class="calenders__btnbtn btn__primary btn__primary--default body2--medium"
               >
                 Learn more
               </button>
@@ -377,7 +385,9 @@
                   <img src="./assets/client4.svg" alt="" />
                   <img src="./assets/client5.svg" alt="" />
                 </div>
-                <button class="customer__nav btn__tertiary--default headline4">
+                <button
+                  class="customer__nav btn btn__tertiary btn__tertiary--default headline4"
+                >
                   Meet all customers
                   <span
                     ><img src="./assets/arrow-right-icon.svg" alt=""
@@ -406,7 +416,7 @@
                     Creating Streamlined Safeguarding Processes with OneRen
                   </p>
                   <button
-                    class="community-updates__btn btn__tertiary--default headline4"
+                    class="community-updates__btn btn btn__tertiary btn__tertiary--default headline4"
                   >
                     Read more
                     <span
@@ -425,7 +435,7 @@
                     manage them?
                   </p>
                   <button
-                    class="community-updates__btn btn__tertiary--default headline4"
+                    class="community-updates__btn btn btn__tertiary btn__tertiary--default headline4"
                   >
                     Read more
                     <span
@@ -443,7 +453,7 @@
                     Revamping the Membership Model with Triathlon Australia
                   </p>
                   <button
-                    class="community-updates__btn btn__tertiary--default headline4"
+                    class="community-updates__btn btn btn__tertiary btn__tertiary--default headline4"
                   >
                     Read more
                     <span
@@ -459,7 +469,7 @@
       <div class="footer">
         <div class="footer__top">
           <p class="headline1">Pellentesque suscipit fringilla libero eu.</p>
-          <button class="btn__primary--default body2--medium">
+          <button class="btn btn__primary btn__primary--default body2--medium">
             Get a Demo
             <span
               ><img src="./assets/arrow-right-icon-white.svg" alt=""
