feat : add nav page

--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
         <div class="header__nav">
           <ul>
             <li class="header__nav-item body2--medium">
-              <a href="">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li class="header__nav-item body2--medium">
-              <a href="">Service</a>
+              <a href="./pages/service.html">Service</a>
             </li>
             <li class="header__nav-item body2--medium">
-              <a href="">Feature</a>
+              <a href="./pages/feature.html">Feature</a>
             </li>
             <li class="header__nav-item body2--medium">
-              <a href="">Product</a>
+              <a href="./pages/product.html">Product</a>
             </li>
             <li class="header__nav-item body2--medium">
-              <a href="">Testimonial</a>
+              <a href="./pages/testimonial.html">Testimonial</a>
             </li>
-            <li class="header__nav-item body2--medium"><a href="">FAQ</a></li>
+            <li class="header__nav-item body2--medium">
+              <a href="./pages/faq.html">FAQ</a>
+            </li>
           </ul>
         </div>
         <div class="header__regis">
