fix: menu sidebar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="container">
       <div class="header">
         <div class="header__logo">
-          <img src="./assets/full-logo.svg" alt="logo" />
+          <a href="./index.html"
+            ><img src="./assets/full-logo.svg" alt="logo"
+          /></a>
         </div>
         <div class="header__nav">
           <ul>
@@ -57,11 +59,25 @@
           <img src="./assets/close.svg" alt="" />
         </div>
         <div class="header__menu-list">
-          <a href="" class="header__menu-item body1--medium">Home</a
-          ><a href="" class="header__menu-item body1--medium">Service</a
-          ><a href="" class="header__menu-item body1--medium">Feature</a
-          ><a href="" class="header__menu-item body1--medium">Product</a
-          ><a href="" class="header__menu-item body1--medium">Testimonial</a
+          <a href="./index.html" class="header__menu-item body1--medium">Home</a
+          ><a
+            href="./pages/service.html"
+            class="header__menu-item body1--medium"
+            >Service</a
+          ><a
+            href="./pages/feature.html"
+            class="header__menu-item body1--medium"
+            >Feature</a
+          ><a
+            href="./pages/product.html"
+            class="header__menu-item body1--medium"
+            >Product</a
+          ><a
+            href="./pages/testimonial.html"
+            class="header__menu-item body1--medium"
+            >Testimonial</a
+          ><a href="./pages/faq.html" class="header__menu-item body1--medium"
+            >FAQ</a
           ><a href="" class="header__menu-item body1--medium">Signup</a
           ><a href="" class="header__menu-item body1--medium">Log in</a>
         </div>
