--- a/pages/feature.html
+++ b/pages/feature.html
@@ -15,7 +15,9 @@
   <body>
     <div class="header">
       <div class="header__logo">
-        <img src="../assets/full-logo.svg" alt="logo" />
+        <a href="../index.html"
+          ><img src="../assets/full-logo.svg" alt="logo"
+        /></a>
       </div>
       <div class="header__nav">
         <ul>
